tests/baselines/reference/nodeModulesImportAssignments(module=nodenext).errors.txt
file.ts(2,1): error TS18056: Declaration file contains synthesized file reference directives: '"types.d.ts"'
index.ts(2,1): error TS18056: Declaration file contains synthesized file reference directives: '"types.d.ts"'
subfolder/index.ts(2,1): error TS18056: Declaration file contains synthesized file reference directives: '"../types.d.ts"'


==== subfolder/index.ts (1 errors) ====
    // cjs format file
    import fs = require("fs");
    ~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"../types.d.ts"'
    fs.readFile;
    export import fs2 = require("fs");
==== index.ts (1 errors) ====
    // esm format file
    import fs = require("fs");
    ~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"types.d.ts"'
    fs.readFile;
    export import fs2 = require("fs");
==== file.ts (1 errors) ====
    // esm format file
    const __require = null;
    ~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"types.d.ts"'
    const _createRequire = null;
    import fs = require("fs");
    fs.readFile;
    export import fs2 = require("fs");
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }
==== types.d.ts (0 errors) ====
    declare module "fs";